centrando el txt y definiendo las diferentes div para poder trabajar en archivos separados

--- a/Parte_1/CSS/estilos.css
+++ b/Parte_1/CSS/estilos.css
@@ -1,1 +1,23 @@
+#h1{
+    
+    text-align: center;
+}
 
+
+#parrafo_1{
+    
+    text-align: center;
+}
+
+
+#parrafo_2{
+
+    font-size: 20px;
+    text-align: center;
+}
+
+
+#parrafo_3{
+
+    text-align: center;
+}
