--- a/Parte_1/CSS/estilos.css
+++ b/Parte_1/CSS/estilos.css
@@ -1,23 +1,39 @@
-#h1{
-    
-    text-align: center;
+body{
+    background: rgba(238, 238, 141, 0.486);
 }
 
 
+#h1{
+    background: #cccccc;
+    text-align: center;
+}
+
+p{
+
+    text-align: center;
+}
+
+#parrafo_2 strong{
+
+    color: red;
+}
+
 #parrafo_1{
     
-    text-align: center;
+    font-size: 16px;
+    
 }
 
 
 #parrafo_2{
 
     font-size: 20px;
-    text-align: center;
+    
 }
 
 
 #parrafo_3{
 
-    text-align: center;
+    font-size: 16px;
+    
 }
