--- a/Parte_1/CSS/estilos.css
+++ b/Parte_1/CSS/estilos.css
@@ -1,6 +1,7 @@
 /*body{
-}*/
-
+    background: rgba(238, 238, 141, 0.486);
+}
+*/
 
 #banner{
 
@@ -8,13 +9,13 @@
 }
 
 .principal{
-
-    background: rgba(238, 238, 141, 0.486);
-
+    background: #cccccc;
+    padding: 20px;
 }
 
+
 h1{
-    
+   
     text-align: center;
 
     /*
@@ -58,13 +59,30 @@ p{
 .Diferenciales{
 
     background: #ffffff;
+    padding: 30px;
 }
 
 h2{
+
     text-align: center;
 }
 
 .items{
-
     font-style: italic;
+}
+
+ul{
+
+    display: inline-block; /* esta propiedad se utiliza para decirle a la etiqueta que solo ocupe su espacio utilizado*/
+    vertical-align: top;/* esta se utiliza para la aliniacion vertical se le indica que se alinie en top arriba*/
+    width: 30%;
+    margin-right: 15%;
+ 
+
+}
+
+#img_diferenciales{
+
+     width: 40%;
+     
 }
