agregando captura de movimiento para el header para colorar los link de la pag de productos.css

--- a/Proyecto_Barberia_alura_parte2/CSS/productos.css
+++ b/Proyecto_Barberia_alura_parte2/CSS/productos.css
@@ -36,6 +36,13 @@ nav a{
 
 }
 
+/* el :hover es para capturar el movimiento del  mouse*/
+nav a:hover{
+
+    color: #c78c19;
+    text-decoration: underline;
+}
+
 .caja2 {
 
     width: 940px;
