--- a/Proyecto_Barberia_alura_parte2/CSS/productos.css
+++ b/Proyecto_Barberia_alura_parte2/CSS/productos.css
@@ -78,10 +78,25 @@ nav a:hover{
 
 }
 
+.productos:hover{
+
+    border-color: #c78c19;
+}
+
+.productos:active{
+
+    border-color: #088c19;
+}
+
 .productos h2{
 
     font-size: 30px;
     font-weight: bold;
+}
+
+.productos:hover h2{
+
+    font-size: 33px;
 }
 
 .producto-descripcion{
