--- a/Proyecto_Barberia_alura_parte3/CSS/style-contacto.css
+++ b/Proyecto_Barberia_alura_parte3/CSS/style-contacto.css
@@ -73,6 +73,27 @@ form label, form .titulo-radio{
     margin: 20px 0px;
 }
 
+.enviar {
+
+    width: 40%;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    background: orange;
+    border: none;
+    border-radius: 5px;
+    transition: 500ms;
+    cursor: pointer;
+
+}
+
+.enviar:hover {
+
+    font-size: 20px;
+    background: darkorange;
+}
+
 footer{
 
     text-align: center;
