--- a/Proyecto_Barberia_alura_parte4/CSS/style-home.css
+++ b/Proyecto_Barberia_alura_parte4/CSS/style-home.css
@@ -1,20 +1,17 @@
-/*body{
-    background: rgba(238, 238, 141, 0.486);
-}
-*/
+/*<Header>*/
 #Encabezado{
     background-color: #bbbbbb;
     padding: 20px 0; /* es el espaciador externo*/
     box-sizing: border-box;
-    margin-bottom: 10px;
+   /* margin-bottom: 10px;*/
 
 
 }
 
-.titulo{
+/*.titulo{
 
     text-align: center;
-}
+}*/
 
 .caja{
 
@@ -55,22 +52,19 @@ nav a:hover{
     text-decoration: underline;
 }
 
+/*<Header/>*/
 
-#banner{
+/*<main>*/
+.banner{
 
     width: 100%;
 }
 
-.principal{
-    background: #cccccc;
-    padding: 20px;
-    margin-top: 20px;
-}
-
-
-.titulo-cent{
+.titulo-principal{
    
     text-align: center;
+    font-size: 2em; /*el "em" es para aumentar x veces el tamaño por defecto en este caso 2 veces porque se utilizo 2em*/
+    margin: 1em 0 ;
 
     /*
     height: 150px; // esta es la altura se puede colorcar en pixeles como esta aqui
@@ -80,34 +74,19 @@ nav a:hover{
     */
 }
 
-p{
+.principal p {
 
-    text-align: center;
+    margin: 0 0 1em;
 }
 
-#parrafo_1{
-    
-    font-size: 16px;
-    
+.principal strong{
+
+    font-weight:bold ;
 }
 
-#parrafo_2 strong{
+.principal em{
 
-    color: red;
-}
-
-
-#parrafo_2{
-
-    font-size: 20px;
-    
-}
-
-
-#parrafo_3{
-
-    font-size: 16px;
-    
+    font-style: italic;
 }
 
 .Diferenciales{
@@ -128,15 +107,16 @@ p{
     margin-right: 15%;
  
 
-}
+} 
 
 #img_diferenciales{
 
      width: 40%;
      
 }
+/*<main/>*/
 
-
+/*<footer>*/
 footer{
 
     text-align: center;
@@ -151,3 +131,4 @@ footer{
     font-size: 13px;
     margin: 20px;
 }
+/*<footer/>*/
