--- a/Proyecto_Barberia_alura_parte4/CSS/style-contacto.css
+++ b/Proyecto_Barberia_alura_parte4/CSS/style-contacto.css
@@ -1,3 +1,8 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
+
 #Encabezado{
     background-color: #bbbbbb;
     padding: 20px 0; /* es el espaciador externo*/
