--- a/Proyecto_Barberia_alura_parte4/CSS/style-home.css
+++ b/Proyecto_Barberia_alura_parte4/CSS/style-home.css
@@ -124,6 +124,15 @@ main{
     margin: 0 20px 20px 0;
 }
 
+.mapa{
+
+padding: 3em 0;
+}
+
+.mapa p{
+    text-align: center;
+    margin: 0 0 3em 0 ;
+}
 #img_diferenciales{
 
      width: 40%;
