agregando video de youtube y acomodando el video paar que este centrado

--- a/Proyecto_Barberia_alura_parte4/CSS/style-home.css
+++ b/Proyecto_Barberia_alura_parte4/CSS/style-home.css
@@ -138,6 +138,12 @@ padding: 3em 0;
      width: 40%;
      
 }
+
+.video{
+
+    width: 50%;
+    margin: 1em auto;
+}
 /*<main/>*/
 
 /*<footer>*/
