--- a/docs/CSS/style-productos.css
+++ b/docs/CSS/style-productos.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
 #Encabezado{
     background-color: #bbbbbb;
     padding: 20px 0; /* es el espaciador externo*/
