poniendo un unicode al principio de cada itens con :before

--- a/Proyecto_Barberia_alura_parte4/CSS/style-home.css
+++ b/Proyecto_Barberia_alura_parte4/CSS/style-home.css
@@ -173,6 +173,11 @@ background: linear-gradient(#fefefe, #888888);
     font-weight: bold;
 }
 
+.items:before{
+    content: "✄ ";
+    font-weight: bold;
+}
+
 #img_diferenciales{
 
      width: 40%;
