--- a/Proyecto_Barberia_alura_parte4/CSS/style-home.css
+++ b/Proyecto_Barberia_alura_parte4/CSS/style-home.css
@@ -105,6 +105,7 @@ nav a:hover{
 .principal em{
 
     font-style: italic;
+    /*text-shadow:2px 2px 10px black ;la sombra para el texto funciona igual que box shadow*/
 }
 
 .principal-contenido{
@@ -142,6 +143,7 @@ background: linear-gradient(#fefefe, #888888);
 
     background: #888888;
     padding: 30px;
+    /*box-shadow: inset 0 0 30px black;esta es para la sombras internas*/
 
 
 }
@@ -181,13 +183,14 @@ background: linear-gradient(#fefefe, #888888);
 .img_diferenciales{
 
      width: 40%;
-     
+     transition: 400ms;
+     box-shadow: 10px 10px  30px 10px #000000; /* 1) horizontal 2) vertical "si es positivo va para abajo y si es negativo va para arriba,  3) el tamaño de la sombra, 4) para la difuminacion de la misma 5) el color de la sombra; se puede colocar cuanats sombras quieras */
 }
 
 .img_diferenciales:hover{
 
     opacity: 0.3;
-    transition: 400ms;
+
 }
 
 .video{
