--- a/docs/CSS/style-home.css
+++ b/docs/CSS/style-home.css
@@ -63,10 +63,10 @@ nav a:hover{
     width: 100%;
 }
 
-main{
-
-    width: 63%; /* para declarar el tamaño del elemento*/
-    margin: 0 auto;/* para centrar la pagina en el medio de la parte horizontal*/
+.principal{
+    
+    background: #fefefe;
+ 
 
 }
 
@@ -85,6 +85,13 @@ main{
     */
 }
 
+.utensilios{
+
+    width: 120px;
+    float: left;/* se utiliza para poder hacer que los elementos que se especifiquen se hacerquen al objeto*/
+    margin: 0 20px 20px 0;
+}
+
 .principal p {
 
     margin: 0 0 1em;
@@ -98,46 +105,85 @@ main{
 .principal em{
 
     font-style: italic;
+    /*text-shadow:2px 2px 10px black ;la sombra para el texto funciona igual que box shadow*/
 }
 
-.Diferenciales{
+.principal-contenido{
+ 
+    width: 63%; /* para declarar el tamaño del elemento*/
+    margin: 0 auto;/* para centrar la pagina en el medio de la parte horizontal*/
 
-    background: #ffffff;
-    padding: 30px;
-}
-
-.items{
-    font-style: italic;
-}
-
-#dif{
-
-    display: inline-block; /* esta propiedad se utiliza para decirle a la etiqueta que solo ocupe su espacio utilizado*/
-    vertical-align: top;/* esta se utiliza para la aliniacion vertical se le indica que se alinie en top arriba*/
-    width: 30%;
-    margin-right: 15%;
-}
-
-.utensilios{
-
-    width: 120px;
-    float: left;/* se utiliza para poder hacer que los elementos que se especifiquen se hacerquen al objeto*/
-    margin: 0 20px 20px 0;
 }
 
 .mapa{
 
 padding: 3em 0;
+background: linear-gradient(#fefefe, #888888);
+
+/*background: linear-gradient(45deg,white 50%, black 30%, grey 20%);  se utiliza para poder hacer degradado "dato curioso si al principio se le colocan los grados cambia la forma en ves de horizontal al grado anexado (45deg), tamien se puede definir el "%" que ocupe cada color " 
+*/
+/*background: radial-gradient(white 50%, black 30%, grey 20%); este es igual a gradiant pero enformato circular*/
+
+
 }
 
 .mapa p{
     text-align: center;
     margin: 0 0 3em 0 ;
 }
-#img_diferenciales{
+
+.mapa-contenido{
+
+    width: 63%; /* para declarar el tamaño del elemento*/
+    margin: 0 auto;/* para centrar la pagina en el medio de la parte horizontal*/
+
+}
+
+.Diferenciales{
+
+    background: #888888;
+    padding: 30px;
+    /*box-shadow: inset 0 0 30px black;esta es para la sombras internas*/
+
+
+}
+
+#dif{
+
+    display: inline-block; /* esta propiedad se utiliza para decirle a la etiqueta que solo ocupe su espacio utilizado*/
+    vertical-align: top;/* esta se utiliza para la aliniacion vertical se le indica que se alinie en top arriba*/
+    width: 40%;
+    margin-right: 15%;
+}
+
+.items{
+    font-style: italic;
+    line-height: 1.5; /* se utiliza para darle el ancho a la linia proporcial a la font en este caso por que se multiplico por 1.5 es el 50% de la fuente lo que se le sumo a la linea entre texto*/
+}
+
+/*.items:first-child{}  asi se puede definir para modificar al primer elemento de la clase*/
+
+.items:nth-child(1){ /* con este podemos definir el numero del item que queremos alterar con esta funcion, si colocamos una "n" despues del numero modifica los pares */
+
+    font-weight: bold;
+}
+
+.items:before{
+    content: "✄ ";
+    font-weight: bold;
+}
+
+.img_diferenciales{
 
      width: 40%;
-     
+     transition: 400ms;
+     box-shadow: 10px 10px  30px 10px #000000; /* 1) horizontal 2) vertical "si es positivo va para abajo y si es negativo va para arriba,  3) el tamaño de la sombra, 4) para la difuminacion de la misma 5) el color de la sombra; se puede colocar cuanats sombras quieras */
+}
+
+.img_diferenciales:hover{
+
+    opacity: 0.3;
+
 }
 
 .video{
@@ -165,3 +211,7 @@ footer{
 }
 /*<footer/>*/
 
+@media screen and (max-width:480px) {
+
+    
+}
