--- a/Proyecto_Barberia_alura_parte4/CSS/style-home.css
+++ b/Proyecto_Barberia_alura_parte4/CSS/style-home.css
@@ -189,7 +189,7 @@ background: linear-gradient(#fefefe, #888888);
 .video{
 
 
-    width: 50%;
+    width: 100%;
     margin: 1em auto;
 }
 /*<main/>*/
@@ -213,5 +213,16 @@ footer{
 
 @media screen and (max-width:480px) {
 
-    
+    h1{
+        text-align: center;
+    }
+
+    nav{
+        position: static;
+    }
+
+    #dif, .img_diferenciales{
+
+        width: auto;
+    }
 }
